easyspaces-mdapi/unpackaged/objects/Customer_Fields__mdt.object
<CustomObject>
    <description>Used to determine appropriate fields for customer contact forms. Used to allow Lightning components to use Lead and Contact objects interchangeably.</description>
    <fields>
        <fullName>Customer_City__c</fullName>
        <description>Used because Address compound fields aren&apos;t yet available as independent fields in entity relationships.</description>
        <inlineHelpText>Enter the API name of the field that holds the customer&apos;s city information.</inlineHelpText>
        <label>Customer City</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <metadataRelationshipControllingField>Customer_Fields__mdt.Sobject_Type__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Customer_Fields_Email</relationshipLabel>
        <relationshipName>Customer_Fields_Email</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <metadataRelationshipControllingField>Customer_Fields__mdt.Sobject_Type__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Customer_Fields_Name</relationshipLabel>
        <relationshipName>Customer_Fields_Name</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Customer_State__c</fullName>
        <description>Used because Address compound fields aren&apos;t yet available as independent fields in entity relationships.</description>
        <inlineHelpText>Enter the API name of the field that holds the customer&apos;s state information.</inlineHelpText>
        <label>Customer State</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <metadataRelationshipControllingField>Customer_Fields__mdt.Sobject_Type__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Customer_Fields</relationshipLabel>
        <relationshipName>Customer_Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Sobject_Type__c</fullName>
        <label>Sobject Type</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Customer_Fields</relationshipLabel>
        <relationshipName>Customer_Fields</relationshipName>
        <type>MetadataRelationship</type>
        <unique>true</unique>
    </fields>
    <label>Customer Fields</label>
    <pluralLabel>Customer Fields</pluralLabel>
</CustomObject>